--- a/Osintitalia_28_11_2024/readme
+++ b/Osintitalia_28_11_2024/readme
@@ -1,1 +1,12 @@
+🚀 𝐎𝐒𝐈𝐍𝐓𝐈𝐓𝐀𝐋𝐈𝐀 𝐨𝐬𝐩𝐢𝐭𝐚 𝐂𝐞𝐬𝐚𝐫𝐞 𝐒𝐜𝐚𝐥𝐢𝐚 ✨ 
+🎙️Titolo dell'intervento: "𝐷𝑎𝑡𝑎-𝐷𝑟𝑖𝑣𝑒𝑛 𝑆𝑡𝑜𝑟𝑦𝑡𝑒𝑙𝑙𝑖𝑛𝑔" 
+📅 Giovedì 28 novembre, ore 21.00 
 
+✨Un viaggio imperdibile nel mondo della 𝐃𝐚𝐭𝐚 𝐒𝐜𝐢𝐞𝐧𝐜𝐞 𝐞 𝐝𝐞𝐥𝐥’𝐈𝐧𝐭𝐞𝐥𝐥𝐢𝐠𝐞𝐧𝐳𝐚 𝐀𝐫𝐭𝐢𝐟𝐢𝐜𝐢𝐚𝐥𝐞 𝐩𝐞𝐫 𝐥’𝐎𝐒𝐈𝐍𝐓! 
+Con il Data Scientist Cesare Scalia, scopriremo come 𝐢 𝐝𝐚𝐭𝐢 𝐩𝐨𝐬𝐬𝐨𝐧𝐨 𝐭𝐫𝐚𝐬𝐟𝐨𝐫𝐦𝐚𝐫𝐞 𝐥'𝐚𝐧𝐚𝐥𝐢𝐬𝐢 𝐞 𝐥𝐚 𝐧𝐚𝐫𝐫𝐚𝐳𝐢𝐨𝐧𝐞 𝐢𝐧𝐟𝐨𝐫𝐦𝐚𝐭𝐢𝐯𝐚. Dal hashtag#WebScraping agli hashtag#OpenData, dai hashtag#SocialMedia per monitorare trend e opinioni pubbliche, fino alla catalogazione automatica con hashtag#Generative hashtag#AI: scopriremo come utilizzare la tecnologia per trasformare 𝐥'𝐢𝐧𝐟𝐨𝐫𝐦𝐚𝐳𝐢𝐨𝐧𝐞 𝐢𝐧 𝐯𝐚𝐥𝐨𝐫𝐞. 
+
+📍Vi aspettiamo! 
+
+💻 𝑃𝑎𝑟𝑡𝑒𝑐𝑖𝑝𝑎𝑧𝑖𝑜𝑛𝑒 𝑔𝑟𝑎𝑡𝑢𝑖𝑡𝑎. 𝐸𝑣𝑒𝑛𝑡𝑜 𝑑𝑒𝑑𝑖𝑐𝑎𝑡𝑜 𝑎𝑖 𝑠𝑜𝑐𝑖. 
+
+#OSINT #DataScience #ArtificialIntelligence #Storytelling #OSINTforGood #AI #LLM #Data #ML #DL #machinelearning #deeplearning
